--- a/src/misc/palette.scss
+++ b/src/misc/palette.scss
@@ -10,6 +10,13 @@ $color5: hsla(340%, 71%, 29%, 1);
 /* RGB */
 $color1: rgba(127, 183, 190, 1);
 $color2: rgba(211, 243, 238, 1);
-$color3: rgba(218, 204, 62, 1);
+$color3: rgb(46, 45, 36)
 $color4: rgba(188, 44, 26, 1);
 $color5: rgba(125, 21, 56, 1);
+
+/* HEX */
+$color1: #7FB7BE;
+$color2: #D3F3EE;
+$color3: #2E2D24;
+$color4: #BC2C1A;
+$color5: #7D1538;
